third_party/move/move-compiler-v2/tests/more-v1/parser/let_binding_bad_name.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/let_binding_bad_name.move:4:13
  │
4 │         let {};
  │             ^
  │             │
  │             Unexpected '{'
  │             Expected a variable or struct or variant name
